--- a/public_html/storyboard.html
+++ b/public_html/storyboard.html
@@ -33,8 +33,8 @@
 				<div style="display: table; height: 200px; overflow: hidden;">
      <div style="display: table-cell; vertical-align: middle;">
 			 <h2 class="introBullet"> <ul>
-				 <li> To view summary of steps, click tabs 1 to 10 in numerical order</li>
-				 <li> Click on the overview picture to view full size verison </li>
+				 <li> Please click tabs 1 to 10 in numerical order to view phone processing steps</li>
+				 <li> Next, please <a href="storyboard.html">CLICK HERE </a>to explore the full size verison </li>
 			 </ul> </h2>
 
 			 </div></div>
