--- a/public_html/S2SBPMN.html
+++ b/public_html/S2SBPMN.html
@@ -18,7 +18,7 @@
 <body>
 	<!-- container for header -->
 	<div >
-		<h1 class="col-md-12" >S2S Process BPMN</h1>
+		<h1 class="title" >S2S Process BPMN</h1>
 	</div>
 	<!-- full image overview -->
 	<div class="row">
@@ -32,7 +32,7 @@
 	 <div style="display: table-cell; vertical-align: middle;">
 		 <h2 class="introBullet"> <ul>
 			 <li> Please click tabs 1 to 10 in numerical order to view phone processing steps</li>
-			 <li> Next, please <a href="bpmn.html">CLICK HERE </a>to explore the full size verison </li>
+			 <li> Next, please <a class="click" href="bpmn.html">CLICK HERE </a>to explore the full size verison </li>
 		 </ul> </h2>
 
 		 </div></div>
@@ -219,7 +219,11 @@
 				});
 			});
 		</script> -->
+		<div class="buttonGroup">
+			<p><a class="btn btn-primary btn-lg pale" href="index.html" role="button" target="blank">Home</a></p>
 
+
+		</div>
 </body>
 
 </html>
