--- a/public_html/S2SStoryboard.html
+++ b/public_html/S2SStoryboard.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Shop floor and Sales storyboard - mental models project</title>
 	<meta charset=utf-8>
-	<title>S2S Business Overview</title>
+	<title>S2S Storyboard</title>
 	<!--Body background image is not supported in HTML5 using CSS instead -->
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
