--- a/public_html/s2s_factory_v2.html
+++ b/public_html/s2s_factory_v2.html
@@ -610,6 +610,40 @@ var couriers=[];
 				scene.add(mesh);
 
 			}
+
+			function addGText(text, x, y, z, rotate, label) {
+				var _name = 'g_' + label;
+				var cv = document.createElement("canvas");
+				var xc = cv.getContext("2d");
+				//var _newWidth = 20;
+				//cv.height = (_newWidth / cv.width)* cv.height;
+				//cv.width = _newWidth;
+				cv.width = 1000;
+				cv.height = 1000;
+				//xc.shadowColor = "#000";
+				//xc.shadowBlur = 1;
+				xc.fillStyle = "#cc0066";
+				xc.font = "80pt arial bold";
+				xc.align="centre";
+				xc.fillText(text, 10, 80);
+
+				var xm = new THREE.MeshBasicMaterial({
+					map: new THREE.Texture(cv),
+					transparent: true
+				});
+				xm.map.needsUpdate = true;
+
+				var mesh = new THREE.Mesh(new THREE.PlaneGeometry(20, 20), xm);
+				mesh.name = _name;
+				mesh.material.side = THREE.DoubleSide;
+				mesh.rotateY(rotate);
+				mesh.position.x = x - 10;
+				mesh.position.y = y;
+				mesh.position.z = z;
+				mesh.doubleSided = true;
+				scene.add(mesh);
+
+			}
 			var marioHeight = 1.7 * meter;
 
 			function changeHeight() {
@@ -954,7 +988,7 @@ addText("Printing Certificates", -26.5*meter, 2*meter, 12* meter, (Math.PI/2));
 							//recycling bins
 
 							createRecycleBin(-10 * meter, 0, 12 * meter, (-Math.PI/2), '0_bin1', addNewrecycleBin);
-							addBigText("Recycling items", -10*meter, 2.5*meter , 12*meter, (-Math.PI));
+							addGText("Recycling items", -10*meter, 2.5*meter , 12*meter, (-Math.PI), 'bins');
 
 							// createRecycleBin(-12 * meter, 0, 12 * meter, 0, '0_bin1', addNewrecycleBin);
 							//<!--createRecycleBin(-14 * meter, 0, 12 * meter, 0, '0_bin1', addNewrecycleBin);
@@ -1355,6 +1389,34 @@ addBigText("Managing Director", -25 * meter, 4.5 * meter, 5 * meter, (Math.PI));
 				prevTime = time;
 			};
 
+
+			function toggleGodText() {
+				scene.traverse(function(node) {
+					if (node instanceof THREE.Mesh) {
+						if (node.name) {
+							var textType = node.name.substring(0, 1);
+							if (textType === 'g') {
+								console.log('Found Overview Text');
+								if (node.visible) node.visible = false;
+								else if (!node.visible) node.visible = true;
+
+							}
+						}
+					} else if (node instanceof THREE.Object3D) {
+						if (node.name) {
+							var textType = node.name.substring(0, 1);
+							if (textType === 'g') {
+								console.log('Found Overview Text');
+								if (node.visible) node.visible = false;
+								else if (!node.visible) node.visible = true;
+
+							}
+						}
+					}
+				});
+			}
+
+
 			var floor_1_hidden = false;
 
 			function hideFloor(_floorNumber) {
@@ -1416,6 +1478,9 @@ addBigText("Managing Director", -25 * meter, 4.5 * meter, 5 * meter, (Math.PI));
 				var onKeyDown = function(event) {
 
 					switch (event.keyCode) {
+						case 192:
+							toggleGodText();
+							break;
 
 						case 105:
 							moveToPosition(100, 0, 0);
